--- a/online-shop/Application/Application.csproj
+++ b/online-shop/Application/Application.csproj
@@ -15,4 +15,9 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
